created a dynamic function for adding routes and swagger files with auth middleware automatically
